<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNewItem">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:text="@string/task_name"
        android:padding="16dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/name_text_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/enter_work_name"
        style="@style/EditorFieldStyle"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:text="@string/initial_value"
        android:padding="16dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/initial_text_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle"
        android:hint="@string/enter_initial_progress"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:text="@string/final_value"
        android:padding="16dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/final_text_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle"
        android:hint="@string/enter_final_progress"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:backgroundTint="#FF7F50"
            android:text="@string/save"
            android:layout_marginBottom="16dp"
            />
    </LinearLayout>
</LinearLayout>